y.output
State 96 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: _PROGRAM _ID ConstList ClassList VarList _LBRACKET MethodDeclList _RBRACKET

    2 ConstList: %empty
    3          | ConstDecl ConstList

    4 ConstDecl: _CONST _TYPE _ID _ASSIGN ConstType ConstDeclList _SEMICOLON

    5 ConstDeclList: %empty
    6              | ConstDeclList _COMMA _ID _ASSIGN ConstType

    7 ConstType: _NUMBER
    8          | _CHAR_CONST
    9          | _BOOL_CONST
   10          | _STRING_CONST

   11 VarList: %empty
   12        | VarDecl VarList

   13 VarDecl: _TYPE _ID VarDeclList _SEMICOLON
   14        | _TYPE _ID _LSQBRACKET _RSQBRACKET VarDeclList _SEMICOLON
   15        | _ID _ID VarDeclList _SEMICOLON

   16 VarDeclList: %empty
   17            | _COMMA _ID VarDeclList
   18            | _COMMA _ID _LSQBRACKET _RSQBRACKET VarDeclList

   19 ClassList: %empty
   20          | ClassDecl ClassList

   21 $@1: %empty

   22 ClassDecl: _CLASS _ID $@1 _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET
   23          | _CLASS _ID _EXTENDS _ID _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

   24 MethodDeclList: %empty
   25               | MethodDecl MethodDeclList

   26 $@2: %empty

   27 $@3: %empty

   28 $@4: %empty

   29 MethodDecl: _TYPE _ID $@2 _LPAREN $@3 FormPars _RPAREN $@4 VarList _LBRACKET Block _RBRACKET
   30           | _VOID _ID _LPAREN FormPars _RPAREN VarList _LBRACKET Block _RBRACKET

   31 FormPars: %empty
   32         | FormPar
   33         | FormPars _COMMA FormPar

   34 FormPar: _TYPE _ID
   35        | _TYPE _ID _LSQBRACKET _RSQBRACKET

   36 Block: %empty
   37      | Statement Block

   38 Statement: Designator
   39          | VarDecl
   40          | Designator _ASSIGN Expression _SEMICOLON
   41          | Designator _LPAREN ActPars _RPAREN _SEMICOLON
   42          | Designator _LPAREN _RPAREN _SEMICOLON
   43          | Designator _INCREMENT _SEMICOLON
   44          | Designator _DECREMENT _SEMICOLON
   45          | _IF _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET
   46          | _IF _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET _ELSE _LBRACKET Block _RBRACKET
   47          | _IF _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET ElseIfList
   48          | _WHILE _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET
   49          | _BREAK _SEMICOLON
   50          | _RETURN _SEMICOLON
   51          | _RETURN Expression _SEMICOLON
   52          | _READ _LPAREN Designator _RPAREN _SEMICOLON
   53          | _PRINT _LPAREN Expression _RPAREN _SEMICOLON
   54          | _PRINT _LPAREN Expression _COMMA _NUMBER _RPAREN _SEMICOLON

   55 ElseIfList: _ELSE _IF _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET
   56           | ElseIfList _ELSE _IF _LPAREN Condition _RPAREN _LBRACKET Block _RBRACKET

   57 ActPars: Expression
   58        | ActPars _COMMA Expression

   59 Condition: CondTerm
   60          | Condition _OR CondTerm

   61 CondTerm: CondFact
   62         | CondTerm _AND CondFact

   63 CondFact: Expression
   64         | Expression CondFactList

   65 CondFactList: Relop Expression
   66             | CondFactList Relop Expression

   67 Expression: _MINUS Term
   68           | _PLUS Term
   69           | Term
   70           | _MINUS Term AddopTermList
   71           | _PLUS Term AddopTermList
   72           | Term AddopTermList

   73 AddopTermList: Addop Term
   74              | Addop Term AddopTermList

   75 Term: Factor
   76     | Factor MulopFactorList

   77 MulopFactorList: Mulop Factor
   78                | MulopFactorList Mulop Factor

   79 Factor: Designator
   80       | Designator _LPAREN _RPAREN
   81       | Designator _LPAREN ActPars _RPAREN
   82       | _NUMBER
   83       | _CHAR_CONST
   84       | _STRING_CONST
   85       | _NEW _ID
   86       | _NEW _ID _LSQBRACKET Expression _RSQBRACKET
   87       | _NEW _TYPE _LSQBRACKET Expression _RSQBRACKET
   88       | _LPAREN Expression _RPAREN

   89 Designator: _ID

   90 @5: %empty

   91 Designator: _ID @5 DesignatorRepeatList

   92 DesignatorRepeatList: DesignatorRepeat
   93                     | DesignatorRepeatList DesignatorRepeat

   94 DesignatorRepeat: _DOT _ID
   95                 | _LSQBRACKET Expression _RSQBRACKET

   96 Relop: _RELOP

   97 Addop: _PLUS
   98      | _MINUS

   99 Mulop: _TIMES
  100      | _DIV
  101      | _MOD


Terminals, with rules where they appear

$end (0) 0
error (256)
_PROGRAM (258) 1
_BREAK (259) 49
_CLASS (260) 22 23
_CONST (261) 4
_NEW (262) 85 86 87
_PRINT (263) 53 54
_READ (264) 52
_VOID (265) 30
_WHILE (266) 48
_EXTENDS (267) 23
_IF (268) 45 46 47 55 56
_ELSE (269) 46 55 56
_RETURN (270) 50 51
_TYPE (271) 4 13 14 29 34 35 87
_ID (272) 1 4 6 13 14 15 17 18 22 23 29 30 34 35 85 86 89 91 94
_NUMBER (273) 7 54 82
_CHAR_CONST (274) 8 83
_BOOL_CONST (275) 9
_STRING_CONST (276) 10 84
_PLUS (277) 68 71 97
_MINUS (278) 67 70 98
_TIMES (279) 99
_DIV (280) 100
_MOD (281) 101
_RELOP (282) 96
_AND (283) 62
_OR (284) 60
_ASSIGN (285) 4 6 40
_INCREMENT (286) 43
_DECREMENT (287) 44
_SEMICOLON (288) 4 13 14 15 40 41 42 43 44 49 50 51 52 53 54
_COMMA (289) 6 17 18 33 54 58
_DOT (290) 94
_LPAREN (291) 29 30 41 42 45 46 47 48 52 53 54 55 56 80 81 88
_RPAREN (292) 29 30 41 42 45 46 47 48 52 53 54 55 56 80 81 88
_LSQBRACKET (293) 14 18 35 86 87 95
_RSQBRACKET (294) 14 18 35 86 87 95
_LBRACKET (295) 1 22 23 29 30 45 46 47 48 55 56
_RBRACKET (296) 1 22 23 29 30 45 46 47 48 55 56


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
Program (43)
    on left: 1, on right: 0
ConstList (44)
    on left: 2 3, on right: 1 3
ConstDecl (45)
    on left: 4, on right: 3
ConstDeclList (46)
    on left: 5 6, on right: 4 6
ConstType (47)
    on left: 7 8 9 10, on right: 4 6
VarList (48)
    on left: 11 12, on right: 1 12 22 23 29 30
VarDecl (49)
    on left: 13 14 15, on right: 12 39
VarDeclList (50)
    on left: 16 17 18, on right: 13 14 15 17 18
ClassList (51)
    on left: 19 20, on right: 1 20
ClassDecl (52)
    on left: 22 23, on right: 20
$@1 (53)
    on left: 21, on right: 22
MethodDeclList (54)
    on left: 24 25, on right: 1 22 23 25
MethodDecl (55)
    on left: 29 30, on right: 25
$@2 (56)
    on left: 26, on right: 29
$@3 (57)
    on left: 27, on right: 29
$@4 (58)
    on left: 28, on right: 29
FormPars (59)
    on left: 31 32 33, on right: 29 30 33
FormPar (60)
    on left: 34 35, on right: 32 33
Block (61)
    on left: 36 37, on right: 29 30 37 45 46 47 48 55 56
Statement (62)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54, on right:
    37
ElseIfList (63)
    on left: 55 56, on right: 47 56
ActPars (64)
    on left: 57 58, on right: 41 58 81
Condition (65)
    on left: 59 60, on right: 45 46 47 48 55 56 60
CondTerm (66)
    on left: 61 62, on right: 59 60 62
CondFact (67)
    on left: 63 64, on right: 61 62
CondFactList (68)
    on left: 65 66, on right: 64 66
Expression (69)
    on left: 67 68 69 70 71 72, on right: 40 51 53 54 57 58 63 64 65
    66 86 87 88 95
AddopTermList (70)
    on left: 73 74, on right: 70 71 72 74
Term (71)
    on left: 75 76, on right: 67 68 69 70 71 72 73 74
MulopFactorList (72)
    on left: 77 78, on right: 76 78
Factor (73)
    on left: 79 80 81 82 83 84 85 86 87 88, on right: 75 76 77 78
Designator (74)
    on left: 89 91, on right: 38 40 41 42 43 44 52 79 80 81
@5 (75)
    on left: 90, on right: 91
DesignatorRepeatList (76)
    on left: 92 93, on right: 91 93
DesignatorRepeat (77)
    on left: 94 95, on right: 92 93
Relop (78)
    on left: 96, on right: 65 66
Addop (79)
    on left: 97 98, on right: 73 74
Mulop (80)
    on left: 99 100 101, on right: 77 78


State 0

    0 $accept: . Program $end

    _PROGRAM  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: _PROGRAM . _ID ConstList ClassList VarList _LBRACKET MethodDeclList _RBRACKET

    _ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: _PROGRAM _ID . ConstList ClassList VarList _LBRACKET MethodDeclList _RBRACKET

    _CONST  shift, and go to state 5

    $default  reduce using rule 2 (ConstList)

    ConstList  go to state 6
    ConstDecl  go to state 7


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    4 ConstDecl: _CONST . _TYPE _ID _ASSIGN ConstType ConstDeclList _SEMICOLON

    _TYPE  shift, and go to state 8


State 6

    1 Program: _PROGRAM _ID ConstList . ClassList VarList _LBRACKET MethodDeclList _RBRACKET

    _CLASS  shift, and go to state 9

    $default  reduce using rule 19 (ClassList)

    ClassList  go to state 10
    ClassDecl  go to state 11


State 7

    3 ConstList: ConstDecl . ConstList

    _CONST  shift, and go to state 5

    $default  reduce using rule 2 (ConstList)

    ConstList  go to state 12
    ConstDecl  go to state 7


State 8

    4 ConstDecl: _CONST _TYPE . _ID _ASSIGN ConstType ConstDeclList _SEMICOLON

    _ID  shift, and go to state 13


State 9

   22 ClassDecl: _CLASS . _ID $@1 _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET
   23          | _CLASS . _ID _EXTENDS _ID _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _ID  shift, and go to state 14


State 10

    1 Program: _PROGRAM _ID ConstList ClassList . VarList _LBRACKET MethodDeclList _RBRACKET

    _TYPE  shift, and go to state 15
    _ID    shift, and go to state 16

    $default  reduce using rule 11 (VarList)

    VarList  go to state 17
    VarDecl  go to state 18


State 11

   20 ClassList: ClassDecl . ClassList

    _CLASS  shift, and go to state 9

    $default  reduce using rule 19 (ClassList)

    ClassList  go to state 19
    ClassDecl  go to state 11


State 12

    3 ConstList: ConstDecl ConstList .

    $default  reduce using rule 3 (ConstList)


State 13

    4 ConstDecl: _CONST _TYPE _ID . _ASSIGN ConstType ConstDeclList _SEMICOLON

    _ASSIGN  shift, and go to state 20


State 14

   22 ClassDecl: _CLASS _ID . $@1 _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET
   23          | _CLASS _ID . _EXTENDS _ID _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _EXTENDS  shift, and go to state 21

    $default  reduce using rule 21 ($@1)

    $@1  go to state 22


State 15

   13 VarDecl: _TYPE . _ID VarDeclList _SEMICOLON
   14        | _TYPE . _ID _LSQBRACKET _RSQBRACKET VarDeclList _SEMICOLON

    _ID  shift, and go to state 23


State 16

   15 VarDecl: _ID . _ID VarDeclList _SEMICOLON

    _ID  shift, and go to state 24


State 17

    1 Program: _PROGRAM _ID ConstList ClassList VarList . _LBRACKET MethodDeclList _RBRACKET

    _LBRACKET  shift, and go to state 25


State 18

   12 VarList: VarDecl . VarList

    _TYPE  shift, and go to state 15
    _ID    shift, and go to state 16

    $default  reduce using rule 11 (VarList)

    VarList  go to state 26
    VarDecl  go to state 18


State 19

   20 ClassList: ClassDecl ClassList .

    $default  reduce using rule 20 (ClassList)


State 20

    4 ConstDecl: _CONST _TYPE _ID _ASSIGN . ConstType ConstDeclList _SEMICOLON

    _NUMBER        shift, and go to state 27
    _CHAR_CONST    shift, and go to state 28
    _BOOL_CONST    shift, and go to state 29
    _STRING_CONST  shift, and go to state 30

    ConstType  go to state 31


State 21

   23 ClassDecl: _CLASS _ID _EXTENDS . _ID _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _ID  shift, and go to state 32


State 22

   22 ClassDecl: _CLASS _ID $@1 . _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _LBRACKET  shift, and go to state 33


State 23

   13 VarDecl: _TYPE _ID . VarDeclList _SEMICOLON
   14        | _TYPE _ID . _LSQBRACKET _RSQBRACKET VarDeclList _SEMICOLON

    _COMMA       shift, and go to state 34
    _LSQBRACKET  shift, and go to state 35

    $default  reduce using rule 16 (VarDeclList)

    VarDeclList  go to state 36


State 24

   15 VarDecl: _ID _ID . VarDeclList _SEMICOLON

    _COMMA  shift, and go to state 34

    $default  reduce using rule 16 (VarDeclList)

    VarDeclList  go to state 37


State 25

    1 Program: _PROGRAM _ID ConstList ClassList VarList _LBRACKET . MethodDeclList _RBRACKET

    _VOID  shift, and go to state 38
    _TYPE  shift, and go to state 39

    $default  reduce using rule 24 (MethodDeclList)

    MethodDeclList  go to state 40
    MethodDecl      go to state 41


State 26

   12 VarList: VarDecl VarList .

    $default  reduce using rule 12 (VarList)


State 27

    7 ConstType: _NUMBER .

    $default  reduce using rule 7 (ConstType)


State 28

    8 ConstType: _CHAR_CONST .

    $default  reduce using rule 8 (ConstType)


State 29

    9 ConstType: _BOOL_CONST .

    $default  reduce using rule 9 (ConstType)


State 30

   10 ConstType: _STRING_CONST .

    $default  reduce using rule 10 (ConstType)


State 31

    4 ConstDecl: _CONST _TYPE _ID _ASSIGN ConstType . ConstDeclList _SEMICOLON

    $default  reduce using rule 5 (ConstDeclList)

    ConstDeclList  go to state 42


State 32

   23 ClassDecl: _CLASS _ID _EXTENDS _ID . _LBRACKET VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _LBRACKET  shift, and go to state 43


State 33

   22 ClassDecl: _CLASS _ID $@1 _LBRACKET . VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _TYPE  shift, and go to state 15
    _ID    shift, and go to state 16

    $default  reduce using rule 11 (VarList)

    VarList  go to state 44
    VarDecl  go to state 18


State 34

   17 VarDeclList: _COMMA . _ID VarDeclList
   18            | _COMMA . _ID _LSQBRACKET _RSQBRACKET VarDeclList

    _ID  shift, and go to state 45


State 35

   14 VarDecl: _TYPE _ID _LSQBRACKET . _RSQBRACKET VarDeclList _SEMICOLON

    _RSQBRACKET  shift, and go to state 46


State 36

   13 VarDecl: _TYPE _ID VarDeclList . _SEMICOLON

    _SEMICOLON  shift, and go to state 47


State 37

   15 VarDecl: _ID _ID VarDeclList . _SEMICOLON

    _SEMICOLON  shift, and go to state 48


State 38

   30 MethodDecl: _VOID . _ID _LPAREN FormPars _RPAREN VarList _LBRACKET Block _RBRACKET

    _ID  shift, and go to state 49


State 39

   29 MethodDecl: _TYPE . _ID $@2 _LPAREN $@3 FormPars _RPAREN $@4 VarList _LBRACKET Block _RBRACKET

    _ID  shift, and go to state 50


State 40

    1 Program: _PROGRAM _ID ConstList ClassList VarList _LBRACKET MethodDeclList . _RBRACKET

    _RBRACKET  shift, and go to state 51


State 41

   25 MethodDeclList: MethodDecl . MethodDeclList

    _VOID  shift, and go to state 38
    _TYPE  shift, and go to state 39

    $default  reduce using rule 24 (MethodDeclList)

    MethodDeclList  go to state 52
    MethodDecl      go to state 41


State 42

    4 ConstDecl: _CONST _TYPE _ID _ASSIGN ConstType ConstDeclList . _SEMICOLON
    6 ConstDeclList: ConstDeclList . _COMMA _ID _ASSIGN ConstType

    _SEMICOLON  shift, and go to state 53
    _COMMA      shift, and go to state 54


State 43

   23 ClassDecl: _CLASS _ID _EXTENDS _ID _LBRACKET . VarList _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _TYPE  shift, and go to state 15
    _ID    shift, and go to state 16

    $default  reduce using rule 11 (VarList)

    VarList  go to state 55
    VarDecl  go to state 18


State 44

   22 ClassDecl: _CLASS _ID $@1 _LBRACKET VarList . _LBRACKET MethodDeclList _RBRACKET _RBRACKET

    _LBRACKET  shift, and go to state 56


State 45
